Fix: left-align web-projects-header to override container text-align:center

--- a/css/style.css
+++ b/css/style.css
@@ -1827,6 +1827,7 @@ header > nav,
 
 .web-projects-header {
   margin: 0 0 48px;
+  text-align: left;
 }
 
 .web-projects-label {
